# vigil

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  install.sh  package-lock.json  package.json  turbo.json
.claude/skills/: bug-driven-testing.md  code-quality-standards.md  pre-commit-checks.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/daemon/: Cargo.toml  openapi.json
apps/daemon/migrations/: 001_initial.sql  003_pipeline_executions.sql
apps/daemon/prompts/: vigil-strategy.md  vigil.md.j2
apps/daemon/skills/acta-update/: SKILL.md
apps/daemon/skills/execute-pipeline/: SKILL.md
apps/daemon/skills/memory-delete/scripts/: delete.sh
apps/daemon/skills/patterns/dag-workflows/: SKILL.md
apps/daemon/skills/patterns/evaluator-optimizer/: SKILL.md
apps/daemon/skills/patterns/multi-agent-debate/: SKILL.md
apps/daemon/skills/patterns/multi-agent-handoffs/: SKILL.md
apps/daemon/skills/patterns/orchestrator-workers/: SKILL.md
apps/daemon/skills/patterns/prompt-chaining/: SKILL.md
apps/daemon/skills/patterns/react-agent/: SKILL.md
apps/daemon/skills/reply-to-worker/scripts/: reply.sh
apps/daemon/skills/session-recall/scripts/: recall.sh
apps/daemon/skills/vigil/acta-update/scripts/: update.sh
apps/daemon/skills/vigil/execute-pipeline/scripts/: execute.sh
apps/daemon/skills/vigil/memory-delete/: SKILL.md
apps/daemon/skills/vigil/memory-recall/: SKILL.md
apps/daemon/skills/vigil/memory-save/: SKILL.md
apps/daemon/skills/vigil/memory-save/scripts/: save.sh
apps/daemon/skills/vigil/parallel-workers/: SKILL.md
apps/daemon/skills/vigil/parallel-workers/scripts/: parallel.sh
apps/daemon/skills/vigil/reply-to-worker/: SKILL.md
apps/daemon/skills/vigil/session-recall/: SKILL.md
apps/daemon/skills/vigil/spawn-worker/: SKILL.md
apps/daemon/skills/vigil/spawn-worker/scripts/: spawn.sh
apps/daemon/skills/vigil/vigil-core/: SKILL.md
apps/daemon/src/: api.rs  cli.rs  config.rs  db.rs  deps.rs  e2e.rs  error.rs  events.rs  hooks.rs  lib.rs  llm.rs  main.rs  mcp.rs  process.rs  services.rs
apps/daemon/src/api/: events.rs  filesystem.rs  health.rs  memory.rs  middleware.rs  notifications.rs  pipeline_executions.rs  pipelines.rs  projects.rs  sessions.rs  settings.rs  skills.rs  sub_sessions.rs  vigil.rs  ws_dashboard.rs  ws_terminal.rs
apps/daemon/src/db/: kv.rs  lance.rs  models.rs  sqlite.rs
apps/daemon/src/hooks/: installer.rs
apps/daemon/src/llm/: vigil.rs
apps/daemon/src/process/: agent_spawner.rs  claude_cli.rs  output_manager.rs  pty_manager.rs
apps/daemon/src/services/: cleanup.rs  lictor.rs  memory_decay.rs  memory_search.rs  memory_store.rs  notification_store.rs  notifier.rs  pipeline_execution_store.rs  pipeline_runner.rs  pipeline_store.rs  recovery.rs  session_manager.rs  session_store.rs  settings_store.rs  sub_session.rs  telegram_poller.rs  vigil.rs  vigil_chat.rs  vigil_manager.rs
apps/daemon/src/tui/: app.rs  mod.rs  state.rs  theme.rs
apps/daemon/src/tui/views/: mod.rs  terminal.rs
apps/daemon/tests/: mcp_smoke.rs
apps/server/: package.json  tsconfig.json
apps/web/: next.config.ts  package.json  tsconfig.json
cli/: package.json
cli/src/: index.ts
docs/: agent frameworks
docs/plans/: 2026-03-07-rust-rewrite-design.md  2026-03-07-rust-rewrite-plan.md  2026-03-08-vigil-first-ui-design.md  2026-03-08-vigil-first-ui-plan.md
migrations/: 002_vigil_messages.sql  004_drop_pipelines.sql
scripts/: build.sh
src/: api.rs  cli.rs  config.rs  deps.rs  e2e.rs  events.rs  hooks.rs  lib.rs  main.rs  process.rs  services.rs
src/api/: events.rs  health.rs  (+1 more)
(+181 files in other folders)
